# msk-match

./: .gitignore  Dockerfile  README.md
demo/: demo.py  demo_config.json  kb.txt
demo/patient_records/: docs_1234.json
src/: README.md  pyproject.toml
src/trialmatcher/: config.py
src/trialmatcher/app/: trialmatcher_ui.py
src/trialmatcher/data/: create_synthetic_patient_data.py
src/trialmatcher/langgraph/: __init__.py  construct_graph.py  langgraph_main.py  node_check_explanation.py  node_consult_agent.py  node_make_final_determination.py  node_principal_investigator.py  node_save_results.py  node_trial_coordinator.py  node_update_current_criterion.py  router_check_if_done.py
src/trialmatcher/trials/: _16_323.py  _18_486.py  _19_300.py  _19_410.py  _21_283.py  _22_259.py  __init__.py
src/trialmatcher/utils/: __init__.py  azure_client.py  convert_label.py  count_criteria_statuses.py  ehr_utils.py  prep_vectorstores.py  redis_manager.py  retry_with_backoff.py  run_experiment.py  schemas.py  trialmatcher_logging.py
